--- a/readme
+++ b/readme
@@ -1,2 +1,3 @@
-This FastHTML app uses Tailwindcss, which is why I initialized this repo as both a node project and as a python virtual environment. 
-If you wanna clone this project, be sure to install all python requirements using the requirements.txt and also set up and initialize tailwind in order to see the correct styles. 
+FastHTML app that uses Tailwindcss. 
+I didn't include the js files for Tailwind in the remote repo because I have included the cdn to tailwind in the headers of the webapp. 
+So there'll be no need to manually install tailwind to be able to see the correct styles. 
